<!--
  ~ Copyright 2016. SHENQINCI(沈钦赐)<dev@qinc.me>
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.EditorActivity">

    <item
        android:id="@+id/action_undo"
        android:icon="@drawable/ic_action_undo"
        android:orderInCategory="1"
        android:title="@string/act_save"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_redo"
        android:icon="@drawable/ic_action_redo"
        android:orderInCategory="2"
        android:title="@string/act_redo"
        app:showAsAction="always" />


    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_action_save"
        android:orderInCategory="4"
        android:title="@string/act_save"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_action_share_menu"
        android:orderInCategory="4"
        android:title="@string/act_share"
        app:showAsAction="ifRoom" />

</menu>